--- a/css/game.css
+++ b/css/game.css
@@ -69,7 +69,7 @@ body.game{
   font-size: 18px;
   position: absolute;
   cursor:pointer;
-  top: 42%;
+  top: 50%;
   right: 14%;
   text-align: center;
   transition: background-color .15s, color .15s;  
@@ -104,7 +104,7 @@ body.game{
   font-size: 18px;
   position: absolute;
   cursor:pointer;
-  top: 52%;
+  top: 60%;
   right: 14%;
   text-align: center;
   transition: background-color .15s, color .15s;  
